--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <meta charset="utf-8">
 <title>Redirecting... Lighthouse Scoring calculator</title>
-<meta http-equiv="refresh" content="0; URL=https://googlechrome.github.io/lighthouse/scorecalc/">
-<link rel="canonical" href="https://googlechrome.github.io/lighthouse/scorecalc/">
+<meta http-equiv="refresh" content="0; URL=https://bharat23.github.io/lh-scorecalc/scorecalc/">
+<link rel="canonical" href="https://bharat23.github.io/lh-scorecalc/scorecalc/">
 
-<h3><a href="https://googlechrome.github.io/lighthouse/scorecalc/">Redirecting...</a></h3>
+<h3><a href="https://bharat23.github.io/lh-scorecalc/scorecalc/">Redirecting...</a></h3>
